--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,11 @@
 {erl_opts, [
   debug_info,
-  {platform_define, "^R", pre17}
+  {platform_define, "^R", pre17},
+  {parse_transform, stacktrace_transform}
+]}.
+
+{deps, [
+    {stacktrace_compat, "1.0.0"}
 ]}.
 
 {eunit_opts, [verbose]}.
